<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_update_product"
          android:title="@string/actualizarProducto"
          android:icon="@drawable/ic_action_edit"
          android:orderInCategory="100"
          app:showAsAction="always"/>
    <item android:id="@+id/action_delete_product"
          android:title="@string/deleteProducto"
          android:icon="@drawable/ic_action_delete_forever"
          android:orderInCategory="100"
          app:showAsAction="always"/>
    <item android:id="@+id/action_favorito_product"
          android:title="@string/addFavortios"
          android:orderInCategory="100"
          app:showAsAction="never"/>
</menu>