<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.AddProductoActivity">
    <ImageView
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:id="@+id/ivAddProduct"
            app:srcCompat="@drawable/photo"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="16dp" android:layout_marginEnd="16dp" android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/linearLayout" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/ivAddProduct" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSubirProducto" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="16dp" android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.0">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etNombreProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_producto_nombre"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_profile_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etDescripcionProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_producto_descripcion"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_profile_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <EditText
                    android:id="@+id/etPrecioProducto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:hint="@string/add_producto_precio"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
            <TextView
                    android:text="@string/add_producto_categoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/textView7"
                    android:textSize="18sp"
                    android:layout_marginRight="5dp" android:textColor="@color/colorAccent"/>
            <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:id="@+id/spinnerCategorias"
                    android:scrollbarSize="5dp"/>
        </LinearLayout>

    </LinearLayout>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubirProducto" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp" android:layout_marginEnd="10dp" android:layout_marginRight="10dp"
            app:layout_constraintHorizontal_bias="0.0" android:text="@string/add_producto_add"
            style="@style/Widget.AppCompat.Button.Colored"/>
</android.support.constraint.ConstraintLayout>