<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_detail_product"
        tools:context=".views.DetailProductActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="250dp" app:srcCompat="@drawable/notfound"
                    android:id="@+id/ivProductDetail"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_product_price"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/ivProductDetail"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:textColorHint="@color/colorPrimaryDark">

                <EditText
                        android:textSize="22sp"
                        android:id="@+id/etPrecioDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal"
                        android:hint="@string/add_producto_precio"
                        android:textStyle="bold"
                        android:background="@null" android:textColor="@color/colorDark"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_product_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    app:layout_constraintTop_toBottomOf="@+id/ivProductDetail" android:layout_marginEnd="32dp"
                    android:layout_marginRight="32dp" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/input_layout_product_price" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:textColorHint="@color/colorPrimaryDark">

                <EditText
                        android:textSize="22sp"
                        android:id="@+id/tvCategoriaDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_producto_categoria"
                        android:background="@null" android:textColor="@color/colorPrimary"/>

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_product_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_product_category"
                    android:textColorHint="@color/colorPrimaryDark">

                <EditText
                        android:textSize="25sp"
                        android:id="@+id/etNombreDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_producto_nombre"
                        android:background="@null" android:textStyle="bold" android:textColor="@color/colorDark"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_product_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_product_name"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:layout_marginRight="16dp"
                    android:layout_marginEnd="16dp" android:textColorHint="@color/colorPrimaryDark">

                <EditText
                        android:textSize="20sp"
                        android:id="@+id/etDescripcionDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_producto_descripcion"
                        android:background="@null" android:textColor="@color/colorDark"/>

            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:text="Subido por"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvSubidoPor"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_layout_product_detail"
                    android:layout_marginTop="32dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="200dp" android:layout_marginRight="200dp"
                    android:textColor="@color/colorPrimaryDark" android:layout_marginBottom="24dp"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>